Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36646

innodb.temp_truncate_freed fails: innodb_buffer_pool_size change aborted

    XMLWordPrintable

Details

    Description

      Test failure:

      innodb.temp_truncate_freed               w1 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2025-04-19 06:45:17
      line
      2025-04-19  6:45:16 4 [ERROR] mariadbd: innodb_buffer_pool_size change aborted
      ^ Found warnings in /home/buildbot/amd64-ubuntu-2204-debug-ps/build/mysql-test/var/1/log/mysqld.1.err
      ok
      

      Reported basing on this build.
      Cross reference shows more failures.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 7h
                  1d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.